--- a/cubinsfordress/cubinsfordress.css
+++ b/cubinsfordress/cubinsfordress.css
@@ -19,6 +19,12 @@
   src: url("../fonts/Inter/Inter-Bold.ttf");
   font-display: swap;
 }
+@font-face {
+  font-style: normal;
+  font-family: "fouore";
+  src: url("../fonts/fouore/Furore.otf");
+  font-display: swap;
+}
 body {
   padding: 0;
   margin: 0;
@@ -29,7 +35,7 @@ main {
   padding: 0 calc( 0.1116071429 * 100vw + -114.2857142857px );
 }
 
-.furniture .fd-row, .furniture, .transportation_wrapper .transportation__contant .transportation__row, .transportation_wrapper .transportation__block, .transportation_wrapper .transportation, .furniture .card .card__sale, .furniture .slider .furniture-line, .transportation_wrapper .transportation__block .slider-wrapper .slider .furniture-line,
+.furniture .fd-row, .furniture, .transportation_wrapper .transportation__contant .transportation__row, .transportation_wrapper .transportation__block, .transportation_wrapper .transportation, .furniture .card .furniture__CardActive, .furniture .card .card__sale, .furniture .slider .furniture-line, .transportation_wrapper .transportation__block .slider-wrapper .slider .furniture-line,
 .furniture .slider .katalog-line,
 .transportation_wrapper .transportation__block .slider-wrapper .slider .katalog-line,
 .furniture .slider .slider-line,
@@ -112,8 +118,9 @@ main {
   background: linear-gradient(90deg, #5134c4, #773cbc, #b856d4);
   border: none;
 }
-.furniture .card .bag__active {
+.furniture .card .card__bagActive {
   background: transparent;
+  border: 1px solid;
   border-image-source: linear-gradient(90deg, #5134c4, #773cbc, #b856d4);
   border-image-slice: 1;
   background: transparent;
@@ -149,6 +156,28 @@ main {
   font-size: calc( 0.001875 * 100vw + 16.4px );
   font-weight: 900;
   margin: 0;
+}
+.furniture .card .furniture__CardActive {
+  border-radius: 20px;
+  width: 65%;
+  background-color: #5134c4;
+  position: absolute;
+  bottom: -18px;
+  right: 10px;
+}
+.furniture .card .furniture__CardActive .furniture__bagActive {
+  margin: auto 0 auto auto;
+  background: white !important;
+  border-radius: 50%;
+  padding: calc( 0.0025 * 100vw + 0.2px ) calc( 0.0025 * 100vw + 5.2px );
+  border: 2px solid #5134c4;
+  font-size: 20px;
+}
+.furniture .card .furniture__CardActive p {
+  text-align: center;
+  margin: auto 0 auto auto;
+  color: white;
+  font-size: calc( 0.00375 * 100vw + 8.8px );
 }
 
 .main_fixed {
@@ -293,12 +322,6 @@ main {
   background: transparent;
   cursor: pointer;
   outline: 0;
-}
-.transportation_wrapper .transportation__contant .quantity_inner .bt_minus p,
-.transportation_wrapper .transportation__contant .quantity_inner .bt_plus p,
-.transportation_wrapper .transportation__contant .quantity_inner .bt_minusMonth p,
-.transportation_wrapper .transportation__contant .quantity_inner .bt_plusMonth p,
-.transportation_wrapper .transportation__contant .quantity_inner .quantity p {
   font-weight: 500;
   font-size: 35px;
   margin: 0;
@@ -314,6 +337,11 @@ main {
 .transportation_wrapper .transportation__contant .quantity_inner .bt_minusMonth {
   margin: -5px 0 0 0;
 }
+.transportation_wrapper .transportation__contant .quantity_inner .fd-col {
+  margin: 0;
+  font-size: 15px;
+  text-align: center;
+}
 .transportation_wrapper .transportation__contant .quantity_inner .fd-col .quantity {
   width: 50px;
   text-align: center;
@@ -322,13 +350,17 @@ main {
   color: #000;
   margin: 0 15px;
 }
-.transportation_wrapper .transportation__contant .quantity_inner .fd-col p {
-  margin: 0;
-  font-size: 15px;
-  text-align: center;
-}
 .transportation_wrapper .transportation__contant .more {
   margin: 10px auto 0 0;
+}
+.transportation_wrapper .transportation__contant .moreActive {
+  background: transparent;
+  border: 1px solid;
+  border-image-source: linear-gradient(90deg, #5134c4, #773cbc, #b856d4);
+  border-image-slice: 1;
+  background: transparent;
+  text-decoration: none;
+  color: black;
 }
 .transportation_wrapper .transportation__info {
   width: 60%;
